kubernetes/book-store/deploy_book-store.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-store
  strategy:
    # стратегия обновления без downtime (уже в % можно писать при большом кол-ве реплик)
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: book-store
    spec:
      containers:
        - image: devalurum/book-store:latest
          name: book-store
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/readiness
              port: 8095
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8095
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 2
            initialDelaySeconds: 15
