kubernetes/book-store/service_book-store.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-store
spec:
  selector:
    app: book-store
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8085
