kubernetes/book-store/ingress_book-store.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-store
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /book-store
            pathType: Prefix
            backend:
              service:
                name: book-store
                port:
                  number: 80
